<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.mobileproject.Child_Create_Activity">

    <Button
        android:id="@+id/Back_ChildAdd"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="298dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toTopOf="@+id/Name_Label_Create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/Name_Label_Create"
        android:layout_width="78dp"
        android:layout_height="46dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/Name_Extra"
        app:layout_constraintBottom_toTopOf="@+id/DoB_Label_Create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Back_ChildAdd" />

    <TextView
        android:id="@+id/DoB_Label_Create"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/DoB"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_Label_Create" />

    <EditText
        android:id="@+id/BabyName_Field_Create"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Name_Label_Create"
        app:layout_constraintTop_toTopOf="@+id/Name_Label_Create" />

    <EditText
        android:id="@+id/Dob_Field_Create"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/DoB_Label_Create"
        app:layout_constraintTop_toBottomOf="@+id/Name_Label_Create" />

    <TextView
        android:id="@+id/Sex_Text_Create"
        android:layout_width="78dp"
        android:layout_height="0dp"
        android:layout_marginBottom="258dp"
        android:layout_marginEnd="133dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/Sex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Sex_RadioGroup_Create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoB_Label_Create" />

    <RadioGroup
        android:id="@+id/Sex_RadioGroup_Create"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginBottom="189dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dob_Field_Create">

        <RadioButton
            android:id="@+id/Male_Radio_Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/Female_Radio_Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Female" />
    </RadioGroup>

    <Button
        android:id="@+id/AddChild_Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="126dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="114dp"
        android:text="@string/AddChild"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dob_Field_Create" />

</android.support.constraint.ConstraintLayout>
