<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.mobileproject.MainActivity">

    <EditText
        android:id="@+id/Username_Main"
        android:layout_width="240dp"
        android:layout_height="62dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password_Main"
        android:layout_width="241dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/Login_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_Main" />

    <Button
        android:id="@+id/Login_Main"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/RegisterHere_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Main"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/RegisterHere_Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/RegisterHere"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Main" />

</android.support.constraint.ConstraintLayout>
