<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.mobileproject.Register_Activity">

    <EditText
        android:id="@+id/Password1_Register"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/Password2_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Register" />

    <EditText
        android:id="@+id/Password2_Register"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/Register_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password1_Register" />

    <EditText
        android:id="@+id/Email_Register"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/Password1_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName_Register" />

    <EditText
        android:id="@+id/LastName_Register"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/Email_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName_Register" />

    <EditText
        android:id="@+id/FirstName_Register"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/LastName_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_Register" />

    <EditText
        android:id="@+id/Username_Register"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/FirstName_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Back_Register" />

    <Button
        android:id="@+id/Back_Register"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="298dp"
        android:layout_marginTop="8dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toTopOf="@+id/Username_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Register_Button"
        android:layout_width="145dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="119dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="17dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password2_Register" />
</android.support.constraint.ConstraintLayout>
