<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.mobileproject.Food_Activity">

    <TextView
        android:id="@+id/BabyName_Meal"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:gravity="fill_vertical|center_horizontal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/New_Meal_Meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Back_Meal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Back_Meal"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:text="@string/Back"
        app:layout_constraintEnd_toStartOf="@+id/BabyName_Meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text_Meal_Meal"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Meal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Text_Time_Meal"
        app:layout_constraintEnd_toStartOf="@+id/New_Meal_Meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Back_Meal"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Text_Time_Meal"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/Time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Text_Ate_Meal"
        app:layout_constraintEnd_toStartOf="@+id/New_Time_Meal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Text_Ate_Meal"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/Percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ViewMeal_Meal"
        app:layout_constraintEnd_toStartOf="@+id/Percentage_Eaten_Meal"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/New_Meal_Meal"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="16dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:gravity="center_vertical|center_horizontal"
        android:hint="Example: Baby Food"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Text_Time_Meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Text_Meal_Meal" />

    <EditText
        android:id="@+id/New_Time_Meal"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="Example: 11:49"
        android:inputType="time"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/Percentage_Eaten_Meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Text_Time_Meal"
        app:layout_constraintTop_toBottomOf="@+id/New_Meal_Meal" />

    <EditText
        android:id="@+id/Percentage_Eaten_Meal"
        android:layout_width="226dp"
        android:layout_height="46dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="1dp"
        android:gravity="center"
        android:hint="Example: 85 %"
        android:inputType="numberSigned"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@+id/AddMeal_Meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Text_Ate_Meal" />

    <Button
        android:id="@+id/AddMeal_Meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="154dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="92dp"
        android:text="@string/AddMeal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ViewMeal_Meal" />

    <Button
        android:id="@+id/ViewMeal_Meal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/ViewMeals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Percentage_Eaten_Meal" />

</android.support.constraint.ConstraintLayout>
